# Tracer

./: .gitignore  CMakeLists.txt  README.MD
dep/: tinyobjloader.cmake
doc/: DOC.MD
src/: common.hpp  main.cpp  main.hpp
src/accelerator/: bvh.cpp
src/camera/: thin_lens_camera.cpp
src/core/: aggregate.hpp  bsdf.hpp  bssrdf.hpp  camera.hpp  filter.hpp  intersection.hpp  light.hpp  material.hpp  medium.hpp  post_processor.hpp  primative.hpp  primitive.cpp  primitive.hpp  render.hpp  renderer.hpp  sampler.hpp  sampling.cpp  sampling.hpp  scene.cpp  scene.hpp  shape.hpp  spectrum.hpp  texture.hpp
src/factory/: accelerator.hpp  camera.hpp  filter.hpp  light.hpp  material.hpp  medium.hpp  post_processor.hpp  primivite.hpp  renderer.hpp  scene.hpp  shape.hpp  texture.hpp
src/filter/: gaussian_filter.cpp
src/light/: diffuse_light.cpp  diffuse_light.hpp  environment_light.cpp
src/material/: aggregate_bsdf.hpp  bxdf.hpp  disney.brdf  disney.cpp  disney_brdf.cpp  disney_bsdf.cpp  fresnel_point.hpp  glass.cpp  invisiable_surface.cpp  metal.cpp  phong.cpp
src/medium/: heterogeneous.cpp  homogeneous.cpp  phase_function.hpp  vacuum.cpp  volume.cpp
src/post_processor/: aces.cpp  gamma.cpp
src/renderer/: bdpt_renderer.cpp  direct_illumination.cpp  direct_illumination.hpp  path_trace_renderer.cpp  pixel_sampler_renderer.cpp  pixel_sampler_renderer.hpp  sppm_renderer.cpp
src/shape/: disk.cpp  geometry.cpp  sphere.cpp  transformed_shape.hpp  triangle.cpp
src/texture/: constant_texture.cpp  constant_texture3d.cpp  hdr_texture.cpp  image_texture.cpp  (+3 more)
(+37 files in other folders)
